오류 수정 중

--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -1,18 +1,18 @@
 @font-face {
     font-family: 'HGGGothicssi_60';
-    src: url(font/HGGGothicssi_60g.woff);
+    src: url('../font/HGGGothicssi_60g.woff');
 }
 
 @font-face{
     font-family: 'HGGGothicssi_40';
-    src: url(font/HGGGothicssi_40g.woff);
+    src: url('../font/HGGGothicssi_40g.woff');
 }
 
 @font-face {
     font-family: 'HGGGothicssi_20';
-    src: url(font/HGGGothicssi_20g.woff);
+    src: url('../font/HGGGothicssi_20g.woff');
 }
-ㄴ
+
 
 
 
