오탈자 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                 <div class="text t1">
                     <h2>나들이의 새로운 패러다임</h2>
                     <br>
-                    <p>Route_planner와 함꼐 Comfort한 나들이를 꿈꾸세요.</p>
+                    <p>Route_planner와 함께 Comfort한 나들이를 꿈꾸세요.</p>
                 </div>
                 <div class="img i1"></div>
             </section>
