--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,7 +1,8 @@
-@import '../css/public.css';
+/* @import '../css/public.css'; */
 
 *{margin: 0; padding: 0; font-family: 'HGGGothicssi_40';}
-body{background-color: var(--color-mainOrange);}
+
+body{background: linear-gradient(90deg, rgba(242,192,5,1) 0%, rgba(242,159,5,1) 100%);}
 
 .container{width: 100%; position: relative;}
 
@@ -26,10 +27,12 @@ section div.img{width: 50%; height: 50vh;}
 .i1{object-fit: cover;}
 section .i1{background-image: url('../img/basicPage1.png'); background-size: contain; background-repeat: no-repeat;} 
 section .i2{background-image: url('../img/basicPage2.png'); background-size: contain; background-repeat: no-repeat;}
-section .i3{background-image: url('../img/basicPage3.png'); background-size: contain; background-repeat: no-repeat; }
+section .i3{background-image: url('../img/basicPage3.png'); background-size: contain; background-repeat: no-repeat;}
 section:nth-of-type(1){display: flex;}
 section:nth-of-type(2){display: flex;}
 section:nth-of-type(3){display: flex;}
 
+button{position:absolute; left: 50%; top: 0; width: 100px; height: 20px; background-color: black;}
+button a{}
 
 
