버튼추가 및 스크롤이벤트 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
             </section>
         </div>
         <button>
-            <a href="./header.html"></a>
+            <a href="header.html">Let's go!</a>
         </button>
     </div>
 </body>
