--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,4 @@
-/* @import '../css/public.css'; */
+@import url('../css/public.css');
 
 *{margin: 0; padding: 0; font-family: 'HGGGothicssi_40';}
 
@@ -32,7 +32,7 @@ section:nth-of-type(1){display: flex;}
 section:nth-of-type(2){display: flex;}
 section:nth-of-type(3){display: flex;}
 
-button{position:absolute; left: 50%; top: 0; width: 100px; height: 20px; background-color: black;}
-button a{}
+button{position:absolute; left: calc(50% - 60px); top: 280vh; width: 120px; height: 50px; background-color: var(--color-darkOrange); border: none; border-radius: 50px; text-align: center;}
+button a{text-decoration: none; font-size: 1.5em; color: var(--color-aliceBlue)}
 
 
