회원가입 버튼 페이지 연동

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,8 +41,8 @@
                 <div class="img i3"></div>
             </section>
         </div>
-        <button>
-            <a href="header.html">Let's go!</a>
+        <button th:onclick="|location.href='@{/add}'|">
+            <a>Let's go!</a>
         </button>
     </div>
 </body>
