--- a/src/main/resources/templates/members/signup.html
+++ b/src/main/resources/templates/members/signup.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../../static/css/signup.css">
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
 <body>
     <div class="logo"><img src="../../static/img/Logo.png" alt=""></div>
@@ -45,6 +45,7 @@
                     </div>
                 
                     <button type="submit">가입하기</button>
+                    <button><a href="../members/home.html">뒤로가기</a></button>
                 </div>
             </div>
         </div>
@@ -54,13 +55,13 @@
 <script>
     $(function(){
         $('.mainWrap .wrap').css({
-            left : '30%',
-            transition : '1s',
+            opacity : '1',
+            transition : '1.5s',
         })
 
         $('.mainWrap').css({
             opacity : '1',
-            transition : '0.5s',
+            transition : '2s',
         })
     })
 </script>
