--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                 <div class="img i3"></div>
             </section>
         </div>
-        <button th:onclick="|location.href='@{/add}'|">
+        <button th:onclick="|location.href='@{/Login}'|">
             <a>Let's go!</a>
         </button>
     </div>
