--- a/src/main/resources/templates/members/home.html
+++ b/src/main/resources/templates/members/home.html
@@ -2,76 +2,83 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta charset="utf-8">
-<link rel="stylesheet" href="/css/home.css"}>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/home.css"}>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="backbody">
-  <div class="mainWrap">
-    <div>
+    <div class="mainWrap">
+        <div>
 
-      <img class="img" src="/img/Logo3.png" alt="logo">
+            <img class="img" src="/img/Logo3.png" alt="logo">
 
-      <img class="img" src="/img/Logo3.png" alt="logo">
+            <img class="img" src="/img/Logo3.png" alt="logo">
 
-      <div class="backboard"></div>
+            <div class="backboard"></div>
+        </div>
+        <div>
+            <div class="menu">
+                <button sec:authorize="isAnonymous()">로그인</button><button sec:authorize="isAuthenticated()" onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|" type="button"> 로그아웃 </button><button type="button" sec:authorize="isAnonymous()" th:onclick="|location.href='@{/signUp}'|">
+
+                <!-- 줄바꿈으로 공백이 생겨서 이렇게 작성 -->
+                회원 가입
+            </button>
+            </div>
+            <div th:if="${param.error}">
+                <div class="alert alert-danger">
+                    사용자ID 또는 비밀번호를 확인해 주세요.
+                </div>
+            </div>
+                <div class="login">
+                    <input type="text" placeholder="  아이디">
+                    <div class="line"></div>
+                    <input type="password" placeholder="  비밀번호">
+                </div>
+                <form th:action="@{/Login}" method="post">
+                    <div class="login">
+                        <input type="text" name="userID" id="userID"  required="required" class="form-control" placeholder="  아이디">
+                        <div class="line"></div>
+                        <input type="password" name="userPassword" id="userPassword"  required="required" class="form-control" placeholder="  비밀번호">
+                        <button type="submit" sec:authorize="isAnonymous()">로그인</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div>
-      <div class="menu">
-        <button sec:authorize="isAnonymous()">로그인</button><button sec:authorize="isAuthenticated()" onclick="location.href='home.html'" th:onclick="|location.href='@{/Logout}'|" type="button"> 로그아웃 </button><button type="button" th:onclick="|location.href='@{/signUp}'|">
-
-          <!-- 줄바꿈으로 공백이 생겨서 이렇게 작성 -->
-          회원 가입
-        </button>
-
-        <!-- 줄바꿈으로 공백이 생겨서 이렇게 작성 -->
-        회원 가입
-      </button>
-
-      </div>
-      <div class="login">
-        <input type="text" placeholder="  아이디">
-        <div class="line"></div>
-        <input type="password" placeholder="  비밀번호">
-        <a sec:authorize="isAnonymous()" th:onclick="|location.href='@{/add}'|" type="button">로그인</a>
-      </div>
-    </div>
-  </div>
-</div>
 </body>
 </html>
 <script>
-  $(function(){
-    /* load 이벤트 */
-    $('.backbody').css({
-      'background-color' : 'rgba(0, 0, 0, 0.3',
-      transition : '2s',
-    })
-    $('.mainWrap').css({
-      background : 'var(--gradient-yellowOrange)',
-      boxShadow : '0 10px 50px',
-      opacity : '1',
-      transition : '2s',
-    })
+    $(function(){
+        /* load 이벤트 */
+        $('.backbody').css({
+            'background-color' : 'rgba(0, 0, 0, 0.3',
+            transition : '2s',
+        })
+        $('.mainWrap').css({
+            background : 'var(--gradient-yellowOrange)',
+            boxShadow : '0 10px 50px',
+            opacity : '1',
+            transition : '2s',
+        })
 
-    /* 로고 색상변경 interval */
-    function randomColor(){
-      var $colorCode = "#" + Math.round(Math.random() * 0xffffff).toString(16);
-      $('.backboard').css({'background-color' : $colorCode});
-    }
+        /* 로고 색상변경 interval */
+        function randomColor(){
+            var $colorCode = "#" + Math.round(Math.random() * 0xffffff).toString(16);
+            $('.backboard').css({'background-color' : $colorCode});
+        }
 
-    setInterval(function(){
-      randomColor();
-    },1500)
+        setInterval(function(){
+            randomColor();
+        },1500)
 
-    /* menu버튼 이벤트 */
-    $('.menu button:nth-of-type(1)').on('click', function () {
-      if ($('.login').is(":visible")) {
-        $('.login').slideUp();
-      } else {
-        $('.login').slideDown();
-      }
+        /* menu버튼 이벤트 */
+        $('.menu button:nth-of-type(1)').on('click', function () {
+            if ($('.login').is(":visible")) {
+                $('.login').slideUp();
+            } else {
+                $('.login').slideDown();
+            }
+        })
     })
-  })
 </script>
