--- a/src/main/resources/templates/members/signup.html
+++ b/src/main/resources/templates/members/signup.html
@@ -1,16 +1,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../../static/css/signup.css">
+<link rel="stylesheet" href="/css/signup.css">
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
 <body>
-    <div class="logo"><img src="../../static/img/Logo.png" alt=""></div>
+    <div class="logo"><img src="/img/Logo.png" alt=""></div>
     <form th:action="@{/signUp}" th:object="${member}" method="post">
         <div class="mainWrap">
             <div class="wrap">
                 <div class="contentWrap">
                     <h1>회원가입</h1>
+                    <div th:replace="form_errors :: formErrorsFragment"></div>
                     <p>차후 회원정보변경은 불가능합니다.</p>
                     <div>
                         <label th:for="userID">아이디</label>
@@ -34,22 +35,23 @@
                 
                     <div>
                         <label th:for="userGender">성별</label>
-                        <input type="radio" name="gen" th:field="*{userGender}" checked>남 
+                        <input type="radio" name="gen" th:field="*{userGender}" value="남자" checked>남
                         &nbsp;&nbsp;
-                        <input type="radio" name="gen" th:field="*{userGender}">여
+                        <input type="radio" name="gen" th:field="*{userGender}" value="여자">여
                     </div>
                 
                     <div>
                         <label th:for="userEmail">Email</label>
-                        <input type="text" th:field="*{userEmail}" placeholder=" 사용자 아이디">
+                        <input type="text" th:field="*{userEmail}" placeholder=" 사용자 이메일">
                     </div>
                 
                     <button type="submit">가입하기</button>
-                    <button><a href="../members/home.html">뒤로가기</a></button>
+                    <button type="button" th:onclick="|location.href='@{/Login}'|">뒤로가기</button>
                 </div>
             </div>
         </div>
     </form>
+</head>
 </body>
 </html>
 <script>
@@ -65,4 +67,3 @@
         })
     })
 </script>
-
