--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -3,12 +3,11 @@
 *{margin: 0; padding: 0; font-family: 'HGGGothicssi_40';}
 
 body{background: var(--gradient-yellowOrange);}
-.backbody{}
 
 .mainWrap{width: 70%; height: 100vh; margin: 0 auto; opacity: 0;}
 .mainWrap > div, .mainWrap > div:nth-of-type(2){width: 100%; position: relative; }
 .mainWrap > div{ height: 55vh;}
-.mainWrap > div img, .mainWrap > div .backboard{width: 400px; height: 400px; position: absolute; left: calc(50% - 200px); bottom: 0; opacity: 0.7;} 
+.mainWrap > div img, .mainWrap > div .backboard{width: 400px; height: 400px; position: absolute; left: calc(50% - 200px); bottom: 0; opacity: 0.7;}
 .mainWrap > div img{z-index: 10;}
 .mainWrap > div .backboard{z-index: 1; background-color: black; border-radius: 35px; transition: 1s; box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);}
 
@@ -27,26 +26,26 @@ body{background: var(--gradient-yellowOrange);}
 .mainWrap > div:nth-of-type(2) .login input:nth-of-type(1){border-radius: 5px 5px 0 0;}
 .mainWrap > div:nth-of-type(2) .login input:nth-of-type(2){border-radius: 0 0 5px 5px;}
 .mainWrap > div:nth-of-type(2) .login .line{height: 1.5px; width: 400px; background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(142,139,133,1) 50%, rgba(255,255,255,1) 100%);}
-.mainWrap > div:nth-of-type(2) .login a{transition: 0.5s; display: inline-block; text-align: center; margin: 3vh 0 0 0; padding: 10px 0; text-decoration: none; font-size: 1.5em; color: var(--color-aliceBlue); width: 100px;  border-radius: 25px; background-color: var(--color-darkOrange);}
-.mainWrap > div:nth-of-type(2) .login a:hover{background-color: rgba(0, 0, 0, 0); color: black; width: 100%;}
+.mainWrap > div:nth-of-type(2) .login button{transition: 0.5s; display: inline-block; text-align: center; margin: 3vh 0 0 0; padding: 10px 0; text-decoration: none; font-size: 1.5em; color: var(--color-aliceBlue); width: 100px;  border-radius: 25px; background-color: var(--color-darkOrange);}
+.mainWrap > div:nth-of-type(2) .login button:hover{background-color: rgba(0, 0, 0, 0); color: black; width: 100%;}
 
 /* 아이디, 비밀번호 placeholder 포커스시 없애기 */
 input:focus::-webkit-input-placeholder,
 textarea:focus::-webkit-input-placeholder { /* WebKit browsers */
-  color:transparent;
+    color:transparent;
 }
- 
+
 input:focus:-moz-placeholder,
 textarea:focus:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-  color:transparent;
+    color:transparent;
 }
- 
+
 input:focus::-moz-placeholder,
 textarea:focus::-moz-placeholder { /* Mozilla Firefox 19+ */
-  color:transparent;
+    color:transparent;
 }
- 
+
 input:focus:-ms-input-placeholder,
 textarea:focus:-ms-input-placeholder { /* Internet Explorer 10+ */
-  color:transparent;
+    color:transparent;
 }
