main.html hover이벤트 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -44,12 +44,12 @@
         /* navBar hover 이벤트 */
         $('header > img').hover(function(){
             $(this).attr({
-                src : '/static/img/logo2.png',
+                src : '/img/logo2.png',
             })
             $(this).css({width : '120px', transition : '0.5s'});
         }, function(){
             $(this).attr({
-                src : '/static/img/logo3.png',
+                src : '/img/logo3.png',
             })
             $(this).css({width : '100px', transition : '0.5s'});
         })
