--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -24,10 +24,10 @@
         </header>
         <section>
             <article>SubContent 1</article>
-            <sarticle>SubContent 2</sarticle>
+            <article>SubContent 2</article>
             <article>SubContent 3</article>
             <article>SubContent 4</article>
-        </section>가
+        </section>
         <footer>
             <ul>
                 <li sec:authentication="principal.username"></li>
