--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,7 +15,7 @@
             <img src="/img/logo3.png" alt="">
             <nav>
                 <ul>
-                    <li>Content</li>
+                    <li>사전설문조사</li>
                     <li>Content</li>
                     <li>Content</li>
                     <li>Content</li>
@@ -23,7 +23,15 @@
             </nav>
         </header>
         <section>
-            <article>SubContent 1</article>
+            <article>
+                <div class="surveyWrap">
+                    <form action="" method="">
+                        <h1>당신에 취향이 궁금해요!</h1>
+                        <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
+
+                    </form>
+                </div>
+            </article>
             <article>SubContent 2</article>
             <article>SubContent 3</article>
             <article>SubContent 4</article>
