--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -17,10 +17,10 @@ body{height: 100vh;}
 .mainWrap .flexWrap section{display: inline-block; height: 100vh; width: 80%; position: relative;}
 .mainWrap .flexWrap section article{position: absolute; left:0; top: 0; width: 100%; height: 100%; font-size: 5em; transition: 0.5s;}
 .mainWrap .flexWrap section article:nth-of-type(1){}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 0 auto;}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form{width: 90%; margin: 5vh auto 0;}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form h1{font-size: 0.5em; padding: 3vh 0 1vh 0}
-.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form p{font-size: 0.3em;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap{width: 90%; height: 90vh; border-radius: 10px; box-shadow: 0px 0px 50px grey; margin: 5vh auto 0;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap h1{font-size: 0.5em; padding: 3vh 0 1vh 5vh;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap p{font-size: 0.3em; padding: 0 0 0 5vh;}
+.mainWrap .flexWrap section article:nth-of-type(1) .surveyWrap form{width: 90%; margin: 5vh auto 0; }
 .mainWrap .flexWrap section article:nth-of-type(2){display: none;}
 .mainWrap .flexWrap section article:nth-of-type(3){display: none;}
 .mainWrap .flexWrap section article:nth-of-type(4){display: none;}
