--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -25,10 +25,13 @@
         <section>
             <article>
                 <div class="surveyWrap">
+                    <h1>당신에 취향이 궁금해요!</h1>
+                    <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
                     <form action="" method="">
-                        <h1>당신에 취향이 궁금해요!</h1>
-                        <p>선택하신 키워드를 토대로 일정을 생성합니다.</p>
-
+                        <p>당신은 평소 실내와 실외 중 무엇을 더 선호하시나요?</p>
+                        <input type="checkbox" name="q1" value="실내">
+                        <input type="checkbox" name="q1" value="실외">
+                        <input type="checkbox" name="q1" value="상관없음">
                     </form>
                 </div>
             </article>
