--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -7,14 +7,14 @@ div.logo{width:100%; height: 100px; position: fixed; background-color: black; op
 
 .mainWrap{width: 100%; height: 100vh; margin: 0 auto; background-color: rgba(0, 0,0, 0.5); position: relative; opacity: 0;}
 
-.mainWrap .wrap{width: 40%; height: 90vh; background-color: rgba(255, 255, 255); margin: 0 auto; position: absolute; left: 30%; top: 5vh; border-radius: 50px; min-width: 360px; opacity: 0;}
+.mainWrap .wrap{width: 1000px; height: 90vh; background-color: rgba(255, 255, 255); margin: 0 auto; position: absolute; left: calc(50% - 500px); top: 5vh; border-radius: 50px; min-height: 800px; min-width: 770px; opacity: 0;}
 
-.mainWrap .wrap .contentWrap{width: 80%; height: 80vh; margin: 0 auto; padding: 10vh 0 0 0 ;}
+.mainWrap .wrap .contentWrap{width: 800px; height: 80vh; margin: 0 auto; padding: 10vh 0 0 0; min-height: 670px;}
 .mainWrap .wrap .contentWrap h1{font-size: 2.5em;}
 .mainWrap .wrap .contentWrap > p:nth-of-type(1){margin: 0 0 5vh 0; font-size: 0.1em; color: rgba(0, 0,0, 0.2);}
-.mainWrap .wrap .contentWrap div{margin: 0 0 4.5vh 0; font-size: 1.25em;}
-.mainWrap .wrap .contentWrap div > label{width: 130px; display: inline-block;}
-.mainWrap .wrap .contentWrap div:not(:nth-of-type(5)) input{width: 400px; height: 30px; padding: 0 0 0 5px}
+.mainWrap .wrap .contentWrap div{margin: 0 0 4.5vh 0; font-size: 1.75em;}
+.mainWrap .wrap .contentWrap div > label{width: 200px; display: inline-block;}
+.mainWrap .wrap .contentWrap div:not(:nth-of-type(5)) input{width: 590px; height: 30px; padding: 2px 0 2px 5px;}
 .mainWrap .wrap .contentWrap div input{font-family: none;}
 
 .mainWrap .wrap .contentWrap button, body > button{width: 100px; height: 40px; font-size: 1.25em; position: absolute;  border-radius: 10px; border: 1px solid gray; }
@@ -24,4 +24,27 @@ div.logo{width:100%; height: 100px; position: fixed; background-color: black; op
 .mainWrap .wrap .contentWrap button:hover{background-color: var(--color-mainOrange);}
 
 .mainWrap .wrap .contentWrap > div{position: relative}
-.mainWrap .wrap .contentWrap > div p{position: absolute; left: 142px; top: 32px; font-size: 0.5em; width:235px; color: red;}
+.mainWrap .wrap .contentWrap > div p{position: absolute; left: 210px; top: 35px; font-size: 0.5em; width:580px; color: red;}
+
+
+
+/* 아이디, 비밀번호 placeholder 포커스시 없애기 */
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder { /* WebKit browsers */
+    color:transparent;
+}
+
+input:focus:-moz-placeholder,
+textarea:focus:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:transparent;
+}
+
+input:focus::-moz-placeholder,
+textarea:focus::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:transparent;
+}
+
+input:focus:-ms-input-placeholder,
+textarea:focus:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:transparent;
+}
